# OpenCL-ICD-Loader

./: CMakeLists.txt  Config.cmake.in
test/loader_test/: CMakeLists.txt
